# polymarket-hft-arbitrage

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
benches/: arbitrage_detection.rs  orderbook_benchmark.rs
config/: default.toml
src/: lib.rs  main.rs
src/analytics/: dashboard.rs  mod.rs  performance_tracker.rs  strategy_analytics.rs  venue_analytics.rs
src/api/: auth.rs  clob.rs  gamma.rs  kalshi.rs  kalshi_ws.rs  mod.rs  opinion.rs  opinion_ws.rs  rate_limiter.rs  websocket.rs
src/core/: config.rs  constants.rs  error.rs  events.rs  memory.rs  mod.rs  retry.rs  types.rs
src/discovery/: mapping_store.rs  market_mapper.rs  mod.rs  semantic_matcher.rs  venue_scanner.rs
src/execution/: algo_execution.rs  atomic.rs  cross_platform.rs  engine.rs  fallback.rs  mod.rs  order_amendment.rs  persistence.rs  router.rs  state_coordinator.rs
src/monitoring/: alerting.rs  audit.rs  health.rs  metrics.rs  mod.rs
src/orderbook/: aggregator.rs  analyzer.rs  cross_venue_aggregator.rs  engine.rs  mod.rs
src/reconciliation/: drift_detector.rs  mod.rs  position_tracker.rs  reconciler.rs
src/risk/: circuit_breaker.rs  kelly.rs  limits.rs  manager.rs  mod.rs  stress_test.rs
src/simulation/: executor.rs  fill_simulator.rs  latency_model.rs  market_replay.rs  mod.rs  performance.rs
src/strategies/: binary.rs  cross_market.rs  cross_platform.rs  detector.rs  mod.rs  multi_outcome.rs  signals.rs  temporal.rs
tests/: integration_test.rs
