[package]
name = "polymarket-hft"
version = "2.0.0"
edition = "2021"
authors = ["Pranay <pranay@hft.dev>"]
description = "Production-grade HFT Polymarket Arbitrage Bot"
license = "MIT"
repository = "https://github.com/pranay123-stack/polymarket-hft-arbitrage"
keywords = ["polymarket", "arbitrage", "hft", "trading", "prediction-markets"]
categories = ["finance"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.release-with-debug]
inherits = "release"
debug = true
strip = false

[features]
default = ["full"]
full = ["backtesting", "dashboard", "ml"]
backtesting = []
dashboard = ["axum", "tower", "tower-http"]
ml = []

[dependencies]
# Async runtime - using tokio with all features for maximum performance
tokio = { version = "1.36", features = ["full", "parking_lot", "tracing"] }
tokio-stream = "0.1"
futures = "0.3"
async-trait = "0.1"

# Web/HTTP clients
reqwest = { version = "0.11", features = ["json", "rustls-tls", "gzip", "brotli", "stream"] }
hyper = { version = "1.1", features = ["full"] }

# WebSocket - using multiple for redundancy
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
fastwebsockets = { version = "0.6", features = ["upgrade"] }

# Web framework for dashboard
axum = { version = "0.7", features = ["ws", "macros"], optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"], optional = true }

# Serialization - using simd-json for speed
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simd-json = "0.13"

# Blockchain / Ethereum
ethers = { version = "2.0", features = ["rustls", "ws", "abigen"] }
ethers-signers = "2.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "rust_decimal"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Cryptography
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
base64 = "0.21"
rand = "0.8"
rand_distr = "0.4"

# Regular expressions
regex = "1.10"

# PostgreSQL client (for reconciliation)
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-uuid-1", "with-chrono-0_4"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"

# Numeric / Financial
rust_decimal = { version = "1.34", features = ["serde", "serde-with-str"] }
rust_decimal_macros = "1.34"
ordered-float = { version = "4.2", features = ["serde"] }

# Data structures
dashmap = "5.5"
parking_lot = "0.12"
crossbeam = "0.8"
crossbeam-channel = "0.5"
smallvec = { version = "1.13", features = ["serde"] }
ahash = "0.8"
indexmap = { version = "2.2", features = ["serde"] }

# Configuration
config = "0.14"
dotenvy = "0.15"
clap = { version = "4.4", features = ["derive"] }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Metrics
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

# Error handling
thiserror = "1.0"
anyhow = "1.0"
color-eyre = "0.6"

# Utilities
uuid = { version = "1.7", features = ["v4", "serde"] }
url = { version = "2.5", features = ["serde"] }
bytes = "1.5"
pin-project-lite = "0.2"
derive_more = "0.99"
strum = { version = "0.26", features = ["derive"] }
lazy_static = "1.4"
once_cell = "1.19"
backoff = { version = "0.4", features = ["tokio"] }
governor = "0.6"
itertools = "0.12"
scopeguard = "1.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
proptest = "1.4"
mockall = "0.12"
test-case = "3.3"
tokio-test = "0.4"
wiremock = "0.5"
fake = "2.9"
pretty_assertions = "1.4"

[[bench]]
name = "orderbook_benchmark"
harness = false

[[bench]]
name = "arbitrage_detection"
harness = false

[[bin]]
name = "polymarket-hft"
path = "src/main.rs"

[[bin]]
name = "backtest"
path = "src/bin/backtest.rs"
required-features = ["backtesting"]

[[bin]]
name = "dashboard"
path = "src/bin/dashboard.rs"
required-features = ["dashboard"]
